<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.screen.registration.RegistrationFragment"
    android:orientation="vertical"
    android:background="@color/slight_grey">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/header"
        android:text="@string/register"
        android:layout_gravity="center"
        android:layout_marginTop="65dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@color/transparent"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/grey"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/grey"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:hint="@string/repeat_password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/grey"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

</androidx.appcompat.widget.LinearLayoutCompat>