<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="50dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/workerImage"
        android:layout_width="170dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_worker_avatar_70"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/empty_name"
        android:textAppearance="@style/header_one"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvProfession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/header_one"
        android:text="@string/empty_profession"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/oneStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_24"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/twoStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_24"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/threeStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_24"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/fourStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_24"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/fiveStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_24"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/worker_profession_header"
            android:text="@string/working_hours_on_average"/>

        <TextView
            android:id="@+id/tvAverageHours"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/worker_profession_header"
            android:text="@string/_0_0"/>
    </LinearLayout>

</LinearLayout>