<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:background="@color/light_grey">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/workerImage"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:layout_gravity="center_vertical"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_worker_avatar_70"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/empty_name"
            android:textAppearance="@style/worker_name"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textAppearance="@style/worker_profession"
            android:text="@string/empty_profession"
            android:layout_marginTop="3dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="3dp">
            <TextView
                android:id="@+id/tvRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/_0_0"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_24"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvAverageHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/_0_0"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time_24"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>